@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0
'left to right direction





class PublishSaleAnnouncementUI{

}

class PublishSaleAnnouncementController {
    +PublishSaleAnnouncementController()
    -PublishSaleAnnouncement(district,state,\ncity,street,zip-code,propertyType,\ntransactionType, numBedrooms,numBathrooms,\nnumParkingSpaces, basement,\ninhabitableLoft, sunExposure,\nowner,photographs,equipment,numEquipment)
}

class SaleAnnouncement{
    -boolean transactionType
    +SaleAnnouncement(todayDate)
    -fillSaleAnnouncement(district,state,\ncity,street,zip-code,propertyType,\ntransactionType, area, cityCenter, \nprice, numBedrooms,numBathrooms,\nnumParkingSpaces, basement,\ninhabitableLoft, sunExposure,\n owner,photographs,equipment,numEquipment)


}

class SaleAnnouncementRepository{

    +createSaleAnnouncement(district,state,\ncity,street,zip-code,propertyType,\ntransactionType, area, cityCenter, \nprice, numBedrooms,numBathrooms,\nnumParkingSpaces,owner,\n photographs,equipment,numEquipment)

}

class Property{
-int area
-int cityCenter
-int price
+Property()
+fillProperty(district,state,\ncity,street,zip-code,propertyType,\ntransactionType, numBedrooms,numBathrooms,\nnumParkingSpaces, basement,\ninhabitableLoft, sunExposure,\nowner,photographs)

}

class Dwelling{
-int numBedrooms
-int numBathrooms
-int numParkingSpaces
+Dwelling(numBedrooms,numBathrooms,\nnumParkingSpaces,basement,\ninhabitableLoft,sunExposure)
}

class House{
-boolean basement
-boolean inhabitableLoft
-int sunExposure
+House(basement,inhabitableLoft,\nsunExposure)
}


class PropertyType{
-int propertyType
+PropertyType(propertyType)
}

class Address{
-int district
-int state
-int city
-int street
-int zip-code
+Address(district,state,\ncity,street,zip-code)
}

class Photograph{
-String photographs
+Photograph(photographs)
}

class Equipment{
-int numEquipments
-List<String> Equipments

}

PublishSaleAnnouncementUI .> PublishSaleAnnouncementController
PublishSaleAnnouncementController ..> "*" SaleAnnouncement : SaleAnnouncement
PublishSaleAnnouncementController ..> "1" SaleAnnouncementRepository : SaleAnnouncementRepository
SaleAnnouncementRepository ..> "*" SaleAnnouncement : creates
PublishSaleAnnouncementController ..> "*" Property : Property
SaleAnnouncement ..> Property : creates
Property ..> "1" PropertyType : has a
Property ..> "1" Address : located at
Property ..> "1..*" Photograph : has
Property ..> "1" Dwelling : can be
Property ..> "*" Equipment : can have
Dwelling ..> "1" House : can be







@enduml